# drake

./: .gitignore
bindings/pydrake/geometry/: geometry_py_optimization.cc
bindings/pydrake/planning/: BUILD.bazel  planning_py.cc  planning_py.h  planning_py_collision_checker.cc  planning_py_fast_clique_inflation.cc  planning_py_fast_iris.cc  planning_py_graph_algorithms.cc  planning_py_iris_from_clique_cover.cc  planning_py_iris_zo.cc  planning_py_visibility_graph.cc
bindings/pydrake/planning/test/: graph_algorithms_test.py  iris_from_clique_cover_test.py
geometry/optimization/: BUILD.bazel  fast_iris.cc  fast_iris.h  hpolyhedron.h  iris.cc  iris.h  iris_internal.cc
geometry/optimization/dev/: BUILD.bazel  fast_iris.cc  fast_iris.h
geometry/optimization/test/: fast_iris_test.cc  iris_in_configuration_space_test.cc
planning/: BUILD.bazel  collision_checker.cc  collision_checker.h  fast_iris.cc  fast_iris.h
planning/graph_algorithms/test/: max_clique_solver_via_mip_test.cc  min_clique_cover_solver_via_greedy_test.cc
planning/iris/: BUILD.bazel  adjacency_matrix_builder_base.cc  adjacency_matrix_builder_base.h  barycentric_vpolytope_sampler.cc  barycentric_vpolytope_sampler.h  fast_clique_inflation.cc  fast_clique_inflation.h  fast_clique_inflation_builder.cc  fast_clique_inflation_builder.h  fast_iris.h  hpolyhedron_point_sampler.cc  hpolyhedron_point_sampler.h  iris_from_clique_cover.cc  iris_from_clique_cover.h  iris_from_clique_cover_options.cc  iris_from_clique_cover_options.h  iris_from_clique_cover_template.cc  iris_from_clique_cover_template.h  iris_from_clique_cover_template_internal.cc  iris_from_clique_cover_template_internal.h  iris_from_clique_cover_v2.cc  iris_from_clique_cover_v2.h  iris_in_configuration_space_clique_inflation.cc  iris_in_configuration_space_clique_inflation.h  iris_np2.cc  iris_np2.h  iris_np_from_clique_builder.cc  iris_np_from_clique_builder.h  iris_zo.cc  iris_zo.h  iris_zo_from_clique_builder.cc  iris_zo_from_clique_builder.h  point_sampler_base.cc  point_sampler_base.h  region_from_clique_base.cc  region_from_clique_base.h
planning/iris/test/: barycentric_vpolytope_sampler_test.cc  box_in_corner_test_fixture.cc  box_in_corner_test_fixture.h  clique_cover_test_utils.cc  clique_cover_test_utils.h  fast_clique_inflation_builder_test.cc  fast_clique_inflation_test.cc  hpolyhedron_point_sampler_test.cc  iris_from_clique_cover_template_internal_test.cc  iris_from_clique_cover_template_test.cc  iris_from_clique_cover_test.cc  iris_in_configuration_space_clique_inflation_test.cc  iris_np2_test.cc  iris_np_from_clique_builder_test.cc  iris_test_fixtures.h  iris_zo_from_clique_builder_test.cc  iris_zo_test.cc
planning/test/: fast_iris_test.cc
planning/trajectory_optimization/: fast_path_planner.cc  fast_path_planner.h
rhjiang/iris_np_experiments/: BUILD.bazel  iris_plant_visualizer.py  iris_plant_visualizer_C_space.py  test_call_IRIS_NP.ipynb  visualization_utils.py
rhjiang/iris_np_experiments/assets/: oneDOF_iiwa7_with_box_collision.sdf
rhjiang/iris_np_experiments/directives/: trans2dof_directives.yaml
