# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

filegroup(
    name = "models",
    srcs = glob(
        [
            "models/**",
        ],
        exclude = [
            "**/*.sha512",
        ],
    ),
    data = [
        "assets/2dof_iiwa_translating_base.sdf",
        "assets/box_small.urdf",
        "assets/ground.urdf",
        "assets/oneDOF_iiwa7_with_box_collision.sdf",
        "assets/twoDOF_iiwa7_with_box_collision.sdf",
        "directives/trans2dof_directives.yaml",
    ],
    visibility = ["//visibility:public"],
)

##########################################################
# LIBRARIES
##########################################################

drake_py_library(
    name = "visualization_utils",
    srcs = [
        "visualization_utils.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "iris_plant_visualizer",
    srcs = [
        "iris_plant_visualizer.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_py_library(
    name = "iris_plant_visualizer_C_space",
    srcs = [
        "iris_plant_visualizer_C_space.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

##########################################################
# NOTEBOOKS
##########################################################

drake_jupyter_py_binary(
    name = "test_call_IRIS_NP",
    add_test_rule = 0,
    data = [
        "//rhjiang/iris_np_experiments:models",
    ],
    deps = [
        "//rhjiang/iris_np_experiments:iris_plant_visualizer",
        "//rhjiang/iris_np_experiments:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "prm_comparison",
    add_test_rule = 0,
    data = [
        "//rhjiang/iris_np_experiments:models",
    ],
    deps = [
        "//rhjiang/iris_np_experiments:iris_plant_visualizer",
        "//rhjiang/iris_np_experiments:visualization_utils",
        "//bindings/pydrake",
    ],
)
